[fix]circleciの設定修正

--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,6 +1,7 @@
 version: 2
 jobs:
   deploy-development:
+    working_directory: ~/app
     docker:
       - image: circleci/node:14.15.3
     step:
@@ -11,6 +12,7 @@ jobs:
       - run: mv ./dotenv/.env.development ./.env
       - run: ./deploy.sh
   deploy-production:
+    working_directory: ~/app
     docker:
       - image: circleci/node:14.15.3
     step:
