--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: circleci/node:14.15.3
     working_directory: ./app
-    step:
+    steps:
       - checkout
       - restore_chache:
           key:
@@ -15,7 +15,7 @@ jobs:
     docker:
       - image: circleci/node:14.15.3
     working_directory: ./app
-    step:
+    steps:
       - checkout
       - restore_chache:
           key:
