--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key:
+          keys:
             - yarn-{{ checksum "package.json" }}
       - run: mv ./dotenv/.env.development ./.env
       - run: ./deploy.sh
@@ -18,7 +18,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key:
+          keys:
             - yarn-{{ checksum "package.json" }}
       - run: mv ./dotenv/.env.production ./.env
       - run: ./deploy.sh
