--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,10 @@ jobs:
       - run:
           name: deploy
           working_direcotry: app
-          command: ./deploy.sh
+          command: |
+            ls
+            pwd
+            ./deploy.sh
   deploy-production:
     docker:
       - image: circleci/node:14.15.3
