--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,16 +9,17 @@ jobs:
           keys:
             - yarn-{{ checksum "app/package.json" }}
       - run:
-          name: change env
+          name: change env and deploy
           working_directory: app
-          command: mv ./dotenv/.env.development ./.env
-      - run:
-          name: deploy
-          working_direcotry: app
           command: |
+            mv ./dotenv/.env.development ./.env
             ls
             pwd
             ./deploy.sh
+            # - run:
+            #     name: deploy
+            #     working_direcotry: app
+            #     command: |
   deploy-production:
     docker:
       - image: circleci/node:14.15.3
