[update]working_directoryの指定先を変更

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
             - yarn-{{ checksum "app/package.json" }}
       - run:
           name: change env and deploy
-          working_directory: app
+          working_directory: ~/app
           command: |
             mv ./dotenv/.env.development ./.env
             ls
