--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
+    "bootstrap-vue": "^2.21.2",
     "concurrent-transform": "^1.0.0",
     "core-js": "^3.6.5",
     "gulp": "^4.0.2",
