--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2018",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "resolveJsonModule": false,
+    "resolveJsonModule": true,
     "lib": [
       "ESNext",
       "ESNext.AsyncIterable",
