--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
+    "suppressImplicitAnyIndexErrors": true,
     "lib": [
       "ESNext",
       "ESNext.AsyncIterable",
