[update]circleciの設定にmarkdownの変換に関する処理を追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
           name: change env and deploy
           working_directory: app
           command: |
+            yarn md
             mv ./dotenv/.env.development ./.env
             ./deploy.sh
   deploy-production:
@@ -42,6 +43,7 @@ jobs:
           name: change env and deploy
           working_directory: app
           command: |
+            yarn md
             mv ./dotenv/.env.production ./.env
             ./deploy.sh
 workflows:
