--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
+    "@types/highlightjs": "^10.1.0",
     "@types/marked": "^1.2.1",
     "bootstrap-vue": "^2.21.2",
     "concurrent-transform": "^1.0.0",
@@ -21,6 +22,7 @@
     "gulp": "^4.0.2",
     "gulp-awspublish": "^4.1.2",
     "gulp-cloudfront-invalidate-aws-publish": "^1.0.0",
+    "highlightjs": "^9.16.2",
     "marked": "^1.2.7",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
