--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt-ts generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
-    "md": "yarn run processmd \"../markdown/*.md\" --outputDir posts/json --summaryOutput posts/summary.json"
+    "md": "yarn run processmd \"../markdown/*.md\" --outputDir posts/json --summaryOutput posts/summary.json",
+    "test": "jest"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
@@ -38,8 +39,14 @@
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@types/jest": "^27.0.3",
+    "@vue/test-utils": "^1.3.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
-    "eslint-plugin-nuxt": "^1.0.0"
+    "eslint-plugin-nuxt": "^1.0.0",
+    "jest": "^27.4.5",
+    "ts-jest": "^27.1.2",
+    "vue-jest": "^3.0.7"
   }
 }
