--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/blog/app
     docker:
-      - image: circleci/node:14.15.3
+      - image: cimg/node:14.18.2
     steps:
       - checkout:
           path: ~/blog
@@ -19,7 +19,7 @@ jobs:
   test:
     working_directory: ~/blog/app
     docker:
-      - image: circleci/node:14.15.3
+      - image: cimg/node:14.18.2
     steps:
       - checkout:
           path: ~/blog
@@ -33,7 +33,7 @@ jobs:
   deploy-development:
     working_directory: ~/blog/app
     docker:
-      - image: circleci/node:14.15.3
+      - image: cimg/node:14.18.2
     steps:
       - checkout:
           path: ~/blog
@@ -56,7 +56,7 @@ jobs:
   deploy-production:
     working_directory: ~/blog/app
     docker:
-      - image: circleci/node:14.15.3
+      - image: cimg/node:14.18.2
     steps:
       - checkout:
           path: ~/blog
