--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,8 @@
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
     "generate": "nuxt-ts generate",
+    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt-ts generate",
+    "deploy:gh-pages": "gh-pages -d dist -m 'Deploy github pages [skip ci]' -t",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "md": "yarn run processmd \"../markdown/*.md\" --outputDir posts/json --summaryOutput posts/summary.json",
@@ -45,6 +47,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0",
+    "gh-pages": "^3.2.3",
     "jest": "^27.4.5",
     "ts-jest": "^27.1.2",
     "vue-jest": "^3.0.7"
