--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,4 +116,4 @@ workflows:
           filters:
             branches:
               only:
-                - gh-pages
+                - gh_pages
