Fix yaml config

--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@types/highlightjs": "^10.1.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/marked": "^1.2.1",
     "bootstrap-vue": "^2.21.2",
     "concurrent-transform": "^1.0.0",
@@ -26,6 +27,7 @@
     "gulp-awspublish": "^4.1.2",
     "gulp-cloudfront-invalidate-aws-publish": "^1.0.0",
     "highlightjs": "^9.16.2",
+    "js-yaml": "^4.1.0",
     "marked": "^1.2.7",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
